# airflow-practice

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: first_dag.py  mong_queries_dag.py  mongo_dag.py
dags/utils/: constants.py  get_filepath.py
data/output_data/: avg_score_per_day.json  top_5_frequent_comments.json
